# BCache

./: .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml
.beads/: bcache.db  issues.jsonl
bodocache/: __init__.py  config.py
bodocache/adapters/: __init__.py  bwrt_adapter.py  file_backend.py  segmented_file_backend.py  uring_backend.py
bodocache/agent/: __init__.py  capabilities.py  copy_engine.cc  copy_engine.h  copy_engine.py  engine_shim.cc  engine_shim.h  node_agent.py  page_first_gather.cu  pinned_pool.cc  pinned_pool.h  sim_node.py
bodocache/integrations/: __init__.py  base.py  config.py  loader.py  ptr.py  sglang_adapter.py  sglang_collectors.py  sglang_glue.py  sglang_integration.py  vllm_adapter.py  vllm_blocks.py  vllm_collectors.py  vllm_glue.py  vllm_integration.py
bodocache/integrations/examples/: sglang_example.py  vllm_example.py
bodocache/planner/: __init__.py  cluster.py  heat_sketch.py  models.py  page_table.py  pipeline.py  policies.py  prefix.py  scheduler.py  service_http.py  waves.py
bodocache/sim/: cli.py  utils.py
configs/: integration_overrides.example.yaml  policies.yaml  runtime.yaml
docs/: bwrt_integration.md  context.md
native/: CMakeLists.txt  copy_engine_common.hpp  copy_engine_native_cuda.cu  copy_engine_native_hip.cpp  copy_engine_native_l0.cpp  io_uring_reader.cpp
proto/: planner.proto
proto/bwrt/: wavespec.proto
scripts/: microbench_copy.py  promote_config.py  replay_tuner.py  run_integration_stub.py  run_planner_service.py  seed_segmented.py  tune_prefetch.py
tests/: conftest.py  test_adapters_agent.py  test_bwrt_adapter.py  test_cluster.py  test_collectors.py  test_fallback.py  test_integrations.py  test_loader.py  test_overrides.py  test_scheduler.py  test_sglang_integration_dyn.py  test_telemetry.py  test_vllm_blocks.py  test_vllm_integration_dyn.py  test_waves.py
